--- a/scripts/configurations/cityscapes_r50.ini
+++ b/scripts/configurations/cityscapes_r50.ini
@@ -7,10 +7,11 @@ val_interval = 5
 log_interval = 5
 
 [body]
-body = resnet50
+body = resnet18
 normalization_mode = syncbn
 body_params = {}
 bn_frozen = no
+
 
 [fpn]
 extra_scales = 1
@@ -47,22 +48,22 @@ nesterov = yes
 loss_weights = (1., 1., 1., 1., 1., 1.)
 
 [scheduler]
-epochs = 130
+epochs = 260
 type = multistep
 update_mode = batch
 params = {"gamma": 0.1, "milestones": [36000, 44000]}
 burn_in_steps = 200
 
 [dataloader]
-shortest_size = 1024
-longest_max_size = 4096
-train_batch_size = 1
-val_batch_size = 2
+shortest_size = 256
+longest_max_size = 512
+train_batch_size = 3
+val_batch_size = 3
 rgb_mean = (0.41738699, 0.45732192, 0.46886091)
 rgb_std = (0.25685097, 0.26509955, 0.29067996)
 random_flip = yes
-random_scale = (0.5, 2.0)
+random_scale = (0.5, 1.25)
 num_workers = 2
 train_set = train
 val_set = val
-coco_gt =
+coco_gt = /cvhci/temp/ajaus/MapTrans/coco/val.json
