--- a/scripts/configurations/vistas_r50.ini
+++ b/scripts/configurations/vistas_r50.ini
@@ -7,10 +7,12 @@ val_interval = 5
 log_interval = 5
 
 [body]
-body = resnet50
+body = resnet18
 normalization_mode = syncbn
 body_params = {}
 bn_frozen = no
+out_channels = {"mod1": 64, "mod2": 64, "mod3": 128, "mod4": 256, "mod5": 512}
+weights = /home/ajaus/pretrained_models/resnet18
 
 [fpn]
 extra_scales = 2
@@ -52,19 +54,19 @@ loss_weights = (1., 1., 1., 1., 1., 1.)
 epochs = 85
 type = multistep
 update_mode = batch
-params = {"gamma": 0.1, "milestones": [144000, 176000]}
+params = {"gamma": 0.1, "milestones": [95000, 125000]}
 burn_in_steps = 200
 
 [dataloader]
-shortest_size = 1920
-longest_max_size = 2304
-train_batch_size = 1
+shortest_size = 512
+longest_max_size = 1048
+train_batch_size = 3
 val_batch_size = 1
 rgb_mean = (0.41738699, 0.45732192, 0.46886091)
 rgb_std = (0.25685097, 0.26509955, 0.29067996)
 random_flip = yes
-random_scale = (0.8, 1.25)
+random_scale = (0.8, 1.0)
 num_workers = 2
 train_set = training
 val_set = validation
-coco_gt =
+coco_gt = /cvhci/temp/ajaus/MapTrans/coco/validation.json
