Added config which trained cityscapes

--- a/scripts/configurations/cityscapes_r50.ini
+++ b/scripts/configurations/cityscapes_r50.ini
@@ -11,6 +11,8 @@ body = resnet18
 normalization_mode = syncbn
 body_params = {}
 bn_frozen = no
+out_channels = {"mod1": 64, "mod2": 64, "mod3": 128, "mod4": 256, "mod5": 512}
+weights = /home/ajaus/pretrained_models/resnet18
 
 
 [fpn]
@@ -48,22 +50,22 @@ nesterov = yes
 loss_weights = (1., 1., 1., 1., 1., 1.)
 
 [scheduler]
-epochs = 260
+epochs = 52
 type = multistep
 update_mode = batch
-params = {"gamma": 0.1, "milestones": [36000, 44000]}
+params = {"gamma": 0.1, "milestones": [25000, 35000]}
 burn_in_steps = 200
 
 [dataloader]
-shortest_size = 256
-longest_max_size = 512
-train_batch_size = 3
-val_batch_size = 3
+shortest_size = 512
+longest_max_size = 2048
+train_batch_size = 2
+val_batch_size = 2
 rgb_mean = (0.41738699, 0.45732192, 0.46886091)
 rgb_std = (0.25685097, 0.26509955, 0.29067996)
 random_flip = yes
-random_scale = (0.5, 1.25)
+random_scale = (0.5, 1.05)
 num_workers = 2
 train_set = train
 val_set = val
-coco_gt = /cvhci/temp/ajaus/MapTrans/coco/val.json
+coco_gt = /cvhci/temp/ajaus/CityTrans/coco/val.json
