--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,8 @@
             "justMyCode": true,
             "args": ["--result", "/home/ajaus/results/panoptic_baseline",
                     "--gt", "/cvhci/temp/ajaus/Custom_Trans//", // --gt", "/cvhci/temp/ajaus/CityTrans",
-                    "--target", "/cvhci/temp/ajaus/RESULTS/CustResult_CityModel" //"--target", "/cvhci/temp/ajaus/RESULTS/CityResult_CityModel"]
+                    //"--target", "/cvhci/temp/ajaus/RESULTS/CustResult_CityModel",
+                    "--target", "/cvhci/temp/ajaus/RESULTS/CustResult_MapModel",
              ]      
                         
         },
